# experience-bench

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
benchmarks/: benchmark.yaml  input.txt  statement.txt
prompts/: ttlt_default.md
src/experience_bench/: __main__.py  cli.py
src/experience_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/experience_bench/adapters/: azureopenai.py  ollama.py  openrouter.py  retry.py  types.py
src/experience_bench/core/: code_exec.py  code_extract.py  config.py  dotenv.py  eval.py  model_spec.py  prompts.py  records.py  run.py  storage.py
src/experience_bench/reporting/: html_report.py
tests/: test_artifacts.py  test_dotenv.py  test_eval.py  test_extract.py  test_model_spec.py  test_openrouter.py  test_prompts.py  test_retry.py
